Don't repeat yourself.

--- a/install
+++ b/install
@@ -1,17 +1,21 @@
 #!/bin/bash
 
-rc_files="gitconfig Xresources vimrc tmux.conf fvwm2rc bashrc"
 home_bin="$HOME/bin"
 here=$(dirname "$0")
+self=$(basename "$0")
 
 mkdir -p "$home_bin"
 
-for file in $rc_files
+for file in *
 do
+  if test ! -f "$file" -o "$self" = "$file"
+  then
+    continue
+  fi
   cp "$here/$file" "$HOME/.$file"
 done
 
 for file in bin/*
 do
-  cp "$here/$file" "$home_bin/$(basename $i)"
+  cp "$here/$file" "$home_bin/$(basename $file)"
 done
