Have install source script.sh, too

--- a/install
+++ b/install
@@ -1,8 +1,11 @@
 #!/usr/bin/env bash
 
-set -o errexit
+help="Installs the dootfiles. Usage:
+
+  install"
 
 here=$(dirname "$0")
+source "$here"/bin/script.sh
 
 for file in "$here"/doots/*; do
   f=$(basename "$file")
