--- a/bin/todo
+++ b/bin/todo
@@ -7,5 +7,5 @@ help="Prints out bugs and to-do items. Usage:
 source "$(dirname "$0")/script.sh"
 
 root=${1-.}
-find "$root" -iname '*TODO*'
-grep -ri '(TODO|BUG|XXX|FIXME)' "$root"
+walk -m TODO
+ORS="" walk -t f | xargs -0 -P0 grep -E '(TODO|BUG|XXX|FIXME)'
