Debug and release builds

--- a/install
+++ b/install
@@ -11,11 +11,11 @@ for file in "$here"/doots/*; do
   cp "$file" "$HOME/.$f"
 done
 
-make all
-mv color expand walk "$HOME/bin"
-
 bin="$HOME/bin"
 mkdir -p "$bin"
 cp "$here"/bin/* "$bin"
 
+make clean
+make RELEASE=1 all
+mv color expand walk "$HOME/bin"
 make clean
