--- a/install
+++ b/install
@@ -25,8 +25,8 @@ make clean
 git clone git@github.com:cbiffle/drupes.git
 cd drupes || exit 1
 cargo install --path .
-cargo clean
 cd ..
+rm -r drupes
 
 # Go goodies
 go install mvdan.cc/sh/v3/cmd/shfmt@latest
