--- a/install
+++ b/install
@@ -26,7 +26,7 @@ git clone git@github.com:cbiffle/drupes.git
 cd drupes || exit 1
 cargo install --path .
 cd ..
-rm -r drupes
+rm -rf drupes
 
 # Go goodies
 go install mvdan.cc/sh/v3/cmd/shfmt@latest
