Run `make strip`

--- a/install
+++ b/install
@@ -32,6 +32,7 @@ install_rust() {
 install_c() {
   make clean
   make RELEASE=1 all
+  make strip
   mv color expand fold pathname shuffle walk "$HOME/bin"
   make clean
 }
